--- a/wp-content/themes/duck-and-cover/assets/sass/header/_header-01.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/header/_header-01.scss
@@ -13,6 +13,10 @@
     }
     #logo {
         position: relative;
+        a {
+          width: 100px;
+          display: block;
+        }
     }
 }
 
