--- a/wp-content/themes/duck-and-cover/assets/sass/footer/_footer.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/footer/_footer.scss
@@ -1,4 +1,20 @@
 //General
+.site-footer {
+  margin-top: 60px;
+  background: #efefef;
+  padding: 40px 0;
+  .footer-social {
+    text-align: center;
+    margin-bottom: 60px;
+    li {
+      display: inline-block;
+      margin: 0 14px;
+      a {
+        font-size: 240%;
+      }
+    }
+  }
+}
 .footer-widget-container {
     padding: 65px 0 10px;
 }
