--- a/wp-content/themes/duck-and-cover/assets/sass/main.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/main.scss
@@ -76,3 +76,8 @@
 # Visual Composer Elements
 --------------------------------------------------------------*/
 @import "vc_elements/vc-elements";
+
+/*--------------------------------------------------------------
+# Duck & Cover Elements
+--------------------------------------------------------------*/
+@import "duck/sicky-crew";
