build: css on crew page

--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_sicky-crew.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_sicky-crew.scss
@@ -1,6 +1,8 @@
 .sicky-crew-all {
-  img {
-    display: block;
-    border-radius: 50%;
+  li {
+    @include backgroundCover;
+    .sicky-crew-member {
+      padding: 180px 0 40px 0;
+    }
   }
 }
