--- a/wp-content/themes/duck-and-cover/assets/sass/mixins/_mixins-master.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/mixins/_mixins-master.scss
@@ -20,3 +20,13 @@
 @mixin clearfix-after() {
     clear: both;
 }
+
+// Fit parent
+@mixin backgroundCover() {
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
