--- a/wp-content/themes/duck-and-cover/assets/css/main.css
+++ b/wp-content/themes/duck-and-cover/assets/css/main.css
@@ -10991,6 +10991,12 @@ body.boxed .navigation-shop.container {
 /*--------------------------------------------------------------
 # Duck & Cover Elements
 --------------------------------------------------------------*/
-.sicky-crew-all img {
-  display: block;
-  border-radius: 50%; }
+.sicky-crew-all li {
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+  .sicky-crew-all li .sicky-crew-member {
+    padding: 180px 0 40px 0; }
