--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_sicky-crew.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_sicky-crew.scss
@@ -1,3 +1,4 @@
+// All members page
 .sicky-crew-all {
   li {
     @include backgroundCover;
@@ -5,4 +6,9 @@
       padding: 180px 0 40px 0;
     }
   }
+}
+
+// Single member page
+.sicky-single {
+
 }
