--- a/wp-content/themes/duck-and-cover/assets/sass/footer/_footer.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/footer/_footer.scss
@@ -3,6 +3,9 @@
   margin-top: 60px;
   background: #efefef;
   padding: 40px 0;
+  .footer-inner {
+    padding: 0 80px;
+  }
   .footer-social {
     text-align: center;
     margin-bottom: 60px;
