--- a/wp-content/themes/duck-and-cover/assets/sass/main.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/main.scss
@@ -81,3 +81,4 @@
 # Duck & Cover Elements
 --------------------------------------------------------------*/
 @import "duck/sicky-crew";
+@import "duck/lookbooks";
