--- a/wp-content/themes/duck-and-cover/assets/css/main.css
+++ b/wp-content/themes/duck-and-cover/assets/css/main.css
@@ -11019,3 +11019,13 @@ body.boxed .navigation-shop.container {
 .sicky-crew_signature {
   width: 170px;
   margin: 14px 0; }
+
+.lookbooks-all li {
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+  .lookbooks-all li .lookbooks-all_single {
+    padding: 620px 0 50px 0; }
