--- a/wp-content/themes/duck-and-cover/assets/sass/layout/_boxed.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/layout/_boxed.scss
@@ -5,6 +5,10 @@
     background: #FFF;
 }
 
+.main-content {
+  padding-top: 71px; // allow for fixed header
+}
+
 body.boxed {
     .page-wrapper {
         margin: 0 auto;
