--- a/wp-content/themes/duck-and-cover/assets/sass/navigation/_menu.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/navigation/_menu.scss
@@ -457,13 +457,14 @@ $sub-menu-padding-narrow: 25px 0;
     padding: 20px 0;
     line-height: 12px;
 
-    &:not(:last-child):after {
-      content: "/";
-      font-size: 11px;
-    }
+    // &:not(:last-child):after {
+    //   content: "/";
+    //   font-size: 11px;
+    // }
 
     > a {
       margin: 0 20px;
+      @extend .gibson-semibold;
       &:before {
         content: "";
         display: block;
