--- a/wp-content/themes/duck-and-cover/assets/sass/layout/_layout.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/layout/_layout.scss
@@ -7,3 +7,11 @@
 ## Boxed
 --------------------------------------------------------------*/
 @import "boxed";
+
+.text-center {
+  text-align: center;
+}
+
+.mb {
+  margin-bottom: 40px;
+}
