--- a/wp-content/themes/duck-and-cover/assets/sass/typography/_typography.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/typography/_typography.scss
@@ -37,6 +37,11 @@ textarea {
   text-transform: uppercase;
 }
 
+.header-2 {
+  @extend .gibson-semibold;
+  font-size: 20px;
+}
+
 
 @import "headings";
 
