--- a/wp-content/themes/duck-and-cover/assets/sass/header/_header.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/header/_header.scss
@@ -25,9 +25,9 @@
       li {
         width: 33.33%;
         float: left;
-        &.facebook a { background: #3b5998; }
-        &.instagram a { background: #125688; }
-        &.twitter a { background: #00aced; }
+        &.facebook a { background: #d8120f; }
+        &.instagram a { background: #e14644; }
+        &.twitter a { background: #eb8887; }
         a {
           height: 71px;
           display: block;
