--- a/wp-content/themes/duck-and-cover/assets/sass/main.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/main.scss
@@ -82,5 +82,6 @@
 --------------------------------------------------------------*/
 @import "duck/sicky-crew";
 @import "duck/lookbooks";
+@import "duck/celebwears";
 @import "duck/blog";
 @import "duck/share-buttons";
