--- a/wp-content/themes/duck-and-cover/assets/sass/mixins/_mixins-master.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/mixins/_mixins-master.scss
@@ -30,3 +30,20 @@
   -o-background-size: cover;
   background-size: cover;
 }
+
+@mixin centre($axis: "both") {
+	position:absolute;
+	@if $axis == "y"{
+		top:50%;
+    transform: translate(0, -50%);
+	}
+	@if $axis == "x"{
+		left:50%;
+		transform: translate(-50%, 0);
+	}
+	@if $axis == "both"{
+		top:50%;
+		left:50%;
+		transform: translate(-50%, -50%);
+	}
+}
