add home page items

--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_celebwears.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_celebwears.scss
@@ -6,6 +6,7 @@
   ul {
     margin-top: 40px;
     li {
+      margin-bottom: 15px;
       a {
         display: block;
         position: relative;
