--- a/wp-content/themes/duck-and-cover/assets/sass/header/_header-01.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/header/_header-01.scss
@@ -13,7 +13,7 @@
   }
   #logo {
     position: relative;
-    padding: 7px 0;
+    padding: 7px 0 7px 15px;
     a {
       width: 74px;
       display: block;
