--- a/wp-content/themes/duck-and-cover/assets/css/main.css
+++ b/wp-content/themes/duck-and-cover/assets/css/main.css
@@ -725,7 +725,7 @@ table th[class*="col-"] {
   margin-left: -15px;
   margin-right: -15px; }
 
-.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12 {
+.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .sicky-single .widget_facewp_instagram ul li, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12 {
   position: relative;
   min-height: 1px;
   width: 100%;
@@ -763,7 +763,7 @@ table th[class*="col-"] {
     -ms-flex-preferred-size: 41.66667%;
     flex-basis: 41.66667%;
     max-width: 41.66667%; }
-  .col-xs-6 {
+  .col-xs-6, .sicky-single .widget_facewp_instagram ul li {
     flex: 50%;
     -webkit-flex-basis: 50%;
     -ms-flex-preferred-size: 50%;
@@ -897,7 +897,7 @@ table th[class*="col-"] {
     -ms-flex-preferred-size: 16.66667%;
     flex-basis: 16.66667%;
     max-width: 16.66667%; }
-  .col-sm-3 {
+  .col-sm-3, .sicky-single .widget_facewp_instagram ul li {
     flex: 25%;
     -webkit-flex-basis: 25%;
     -ms-flex-preferred-size: 25%;
@@ -6716,7 +6716,7 @@ select:focus {
 
 .header-01 #logo {
   position: relative;
-  padding: 7px 0; }
+  padding: 7px 0 7px 15px; }
   .header-01 #logo a {
     width: 74px;
     display: block; }
@@ -11152,27 +11152,29 @@ body.boxed .navigation-shop.container {
 
 .celebwears-all ul {
   margin-top: 40px; }
-  .celebwears-all ul li a {
-    display: block;
-    position: relative; }
-    .celebwears-all ul li a .caption {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba(0, 0, 0, 0.3);
-      transition: all .2s ease;
-      opacity: 0; }
-      .celebwears-all ul li a .caption .caption-inner {
+  .celebwears-all ul li {
+    margin-bottom: 15px; }
+    .celebwears-all ul li a {
+      display: block;
+      position: relative; }
+      .celebwears-all ul li a .caption {
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%); }
-        .celebwears-all ul li a .caption .caption-inner h3, .celebwears-all ul li a .caption .caption-inner h4 {
-          color: white; }
-    .celebwears-all ul li a:hover .caption {
-      opacity: 1; }
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.3);
+        transition: all .2s ease;
+        opacity: 0; }
+        .celebwears-all ul li a .caption .caption-inner {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%); }
+          .celebwears-all ul li a .caption .caption-inner h3, .celebwears-all ul li a .caption .caption-inner h4 {
+            color: white; }
+      .celebwears-all ul li a:hover .caption {
+        opacity: 1; }
 
 .celebwears-single .celebwears-single_hero {
   margin: 40px 0; }
@@ -11190,6 +11192,13 @@ body.boxed .navigation-shop.container {
       display: block;
       text-transform: uppercase;
       opacity: .5; }
+
+#duck-front-page .widget_facewp_instagram ul {
+  display: flex;
+  margin: 0 -20px; }
+  #duck-front-page .widget_facewp_instagram ul li {
+    width: 20%;
+    padding: 0 10px 20px 10px; }
 
 .duck-blog article {
   padding: 0 20px; }
