--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
@@ -6,8 +6,11 @@
       display: flex;
       margin: 0 -20px;
       li {
-        width: 20%;
+        width: 50%;
         padding: 0 10px 20px 10px;
+        @include media-breakpoint-up(md) {
+          width: 20%;
+        }
       }
     }
   }
