--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
@@ -14,4 +14,13 @@
       }
     }
   }
+
+  // Pre Footer Image
+  .pre-footer-image {
+    position: relative;
+    .caption {
+      @include centre(y);
+      right: 15%;
+    }
+  }
 }
