--- a/wp-content/themes/duck-and-cover/assets/sass/bootstrap/_tables.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/bootstrap/_tables.scss
@@ -87,7 +87,7 @@ table {
     width: 100%;
     overflow-y: hidden;
     -ms-overflow-style: -ms-autohiding-scrollbar;
-    border: 1px solid $table-border-color;
+    //border: 1px solid $table-border-color;
 
     // Tighten up spacing
     > .table {
