--- a/wp-content/themes/duck-and-cover/assets/sass/footer/_footer.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/footer/_footer.scss
@@ -1,7 +1,7 @@
 //General
 .site-footer {
   margin-top: 60px;
-  background: #efefef;
+  background-color: #f9f9f9 !important;
   padding: 40px 0;
   .footer-inner {
     padding: 0 80px;
