--- a/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_page.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_page.scss
@@ -92,7 +92,7 @@
  *  Cart
  */
 .cart_container {
-    //padding: 80px 15px;
+    padding: 60px 0 0 0;
     // .page-title {
     //     margin-bottom: 90px;
     // }
