--- a/wp-content/themes/duck-and-cover/assets/sass/main.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/main.scss
@@ -83,6 +83,7 @@
 @import "duck/sicky-crew";
 @import "duck/lookbooks";
 @import "duck/celebwears";
+@import "duck/collections";
 @import "duck/front-page";
 @import "duck/blog";
 @import "duck/share-buttons";
